TODO: Testing, testing ..


V RF.01.38.39.Mod (2018-03-04) 
- maybe improved HBS scan tolerance for uneven ceramic beds.
- always show full screen messages when finishing the HBS scan (in case of ok and fail) which the user has to dismiss with the ok button.
- improved menu text lengths for RF1000 16-char-display

V RF.01.38.38.Mod (2018-03-03) 
- some commenting
- removed check that z-offset-scan to really allow the scan while the printer thinks it is printing.
- removed self introduced overflow on queuePositionCurrentSteps[E_AXIS]. queuePositionCurrentSteps is size 3.

V RF.01.38.37.Mod (2018-02-26) 
- dont allow any fan speed change to empty move cache. if this is needed fan speed has to be set in queue (TODO), not empty it.
- some commenting because i checked some things
- possible fix for easygo25's tilt-bug at the end of an SD-Print. http://www.rf1000.de/viewtopic.php?f=7&t=2199
- removed home-only-z when commanding home-all by menu and unknown z-endstops. homing should always do what the user demands and G28 as gcode does not have this limit. It seemd totally unnecessary and counterintuitive.

V RF.01.38.36.Mod (2018-02-22) 
- via menu the homing feedrate and maximum feedrate can now be adjusted better: 
    - Z increments 1, not 5. 
    - Maximum is MAX_FEEDRATE_X _Y _Z not 1000.
 (For Z-Axis 12mm/s is fast! That is because we use 2560steps/mm. XY on the other hand only uses 152 Steps/mm. That is a factor of 16.84!
 So 200mm/s at X/Y-Axis fits 12mm/s in Z-Axis when it comes to interrupt amounts and calculation time.)

V RF.01.38.35.Mod (2018-02-21) 
- https://github.com/foosel/OctoPrint/issues/2367#issuecomment-357554341 changed upstream command "disconnect" to "stop" when canceling a print. The new octoprint will support this.
- added octostep as an 8x double/quad-stepping. I saw that moving Z fast still caused lags.
- decreased MAX_FEEDRATE_X _Y _Z in RF1000.h and RF2000.h to avoid way to fast speeds.

V RF.01.38.34.Mod (2018-02-10) 